La frega agrege un comentario

--- a/styles.css
+++ b/styles.css
@@ -26,4 +26,4 @@ body {
     bottom: 0;
     width: 100%;
   }
-  
+  /* La frega esta wea si se subio estoy haciendo bien las cosas chatumre xdd */
