--- a/styles.css
+++ b/styles.css
@@ -1,29 +1,41 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 20px;
+*{
     padding: 0;
-    background-color: #f0f0f0;
-  }
-  
-  header {
-    background-color: #333;
-    color: white;
-    text-align: center;
+    margin: 0;
+    box-sizing: border-box;
+    
+}
+.header {
+    background-color: rgb(53, 53, 53);
+    color: #e0e0e0;
+    padding: 20px;
+    font-family: 'Courier New', Courier, monospace;
+}
+
+.header h1 {
+    font-size: 2.5rem;
+    font-weight: 900;    
+}
+
+.sections{
+    padding: 20px;
+}
+.titulo_sections1{
+    font-size: 1.2rem;
     padding: 10px;
-  }
-  
-  section {
-    margin-top: 20px;
-  }
-  
-  footer {
-    margin-top: 20px;
-    background-color: #333;
-    color: white;
-    text-align: center;
+}
+.text-family{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+.p-text{
+    color: rgb(83, 83, 83);
+}
+.padding{
     padding: 10px;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-  }
-  /* La frega esta wea si se subio estoy haciendo bien las cosas chatumre xdd */
+    
+}
+li{
+    font-weight: 600;    
+}
+.titulo-pasos{
+    font-size: 1rem;
+}
